chore: enable some initial jdk 25 features